# mai-fund-algs-3-sem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddTask.cmake
include/: conv.h  error.h
include/lib/: chars.h  conv.h  convert.h  deque.h  error.h  lexeme.h  mth.h  paths.h  string.h  utils.h  vector.h
include/lib/collections/: deque.h  string.h  vector.h
src/labs/lab-1/task-1/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-1/task-10/: CMakeLists.txt  main.c
src/labs/lab-1/task-2/: CMakeLists.txt  exp.c  gamma.c  ln_2.c  main.c  pi.c  sqrt_2.c  tasks.h
src/labs/lab-1/task-3/: CMakeLists.txt  cmd.c  cmd.h  main.c  tasks.c  tasks.h
src/labs/lab-1/task-4/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-1/task-5/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-1/task-6/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-1/task-7/: CMakeLists.txt  cmd.c  cmd.h  lexeme.c  lexeme.h  main.c  tasks.c  tasks.h
src/labs/lab-1/task-8/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-1/task-9-1/: CMakeLists.txt  main.c
src/labs/lab-1/task-9-2/: CMakeLists.txt  main.c
src/labs/lab-2/task-1/: CMakeLists.txt  cmd.c  cmd.h  main.c  tasks.c  tasks.h
src/labs/lab-2/task-10/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-2/task-2/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-2/task-3/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-2/task-4/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-2/task-5/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-2/task-6/: CMakeLists.txt  main.c  tasks.c  tasks.h
src/labs/lab-2/task-7/: CMakeLists.txt  main.c
src/labs/lab-2/task-8/: CMakeLists.txt  main.c  task.c  task.h  ubigint.c  ubigint.h
src/labs/lab-2/task-9/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-1/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-10/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-2/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-3/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-4/: CMakeLists.txt  datetime.c  datetime.h  main.c  prompt.c  prompt.h  string_ex.c  string_ex.h  task.c  task.h
src/labs/lab-3/task-5/: CMakeLists.txt  main.c  task.c  task.h
src/labs/lab-3/task-6/: CMakeLists.txt  find.c  find.h  main.c  task.c  task.h
src/labs/lab-3/task-7/: CMakeLists.txt  main.c  marshal.c  marshal.h  task.c  task.h
src/labs/lab-3/task-9/: CMakeLists.txt  main.c  task.c  task.h  top_words.c
src/labs/lab-4/task-2/: CMakeLists.txt  insn_parser.c  insn_parser.h  interp.c  interp.h  main.c
src/labs/lab-4/task-9-1/: CMakeLists.txt  binary_heap.c  binary_heap.h  binomial_heap.c  binomial_heap.h  bst.c  bst.h  department.c  department.h  dynamic_array.c  dynamic_array.h  fibonacci_heap.c  fibonacci_heap.h  hashtable.c  hashtable.h  heap.c  heap.h  leftist_heap.c  leftist_heap.h  main.c  model.c  model.h  request.c  request.h  skew_heap.c  skew_heap.h  storage.c  storage.h  treap.c  treap.h  trie.c  trie.h
src/labs/lab-4/task-9-2/: CMakeLists.txt  main.c
src/labs/lab-4/task-9-3/: CMakeLists.txt  main.c
src/labs/lab-5/task-1/: CMakeLists.txt  main.cpp  task.cpp  task.h
src/labs/lab-5/task-2/: CMakeLists.txt  main.cpp  task.cpp  task.h
src/labs/lab-5/task-3/: CMakeLists.txt  main.cpp  task.cpp  task.h
src/labs/lab-5/task-4/: CMakeLists.txt  main.cpp  task.cpp  task.h
src/labs/lab-5/task-6/: CMakeLists.txt  const_iterator.cpp  const_iterator.h  iterator.cpp  iterator.h  main.cpp  vector.cpp  vector.h
src/lib/: chars.c  conv.c  convert.c  deque.c  error.c  io.c  lexeme.c  mth.c  paths.c  string.c  utils.c  vector.c
src/lib/collections/: deque.c  string.c  vector.c
