cmake_minimum_required(VERSION 3.27)

project(mai_labs_3_sem LANGUAGES C CXX)

set(CMAKE_C_STANDARD "23")
set(CMAKE_C_FLAGS "-Wall -pedantic")
set(CMAKE_CXX_STANDARD "23")
set(CMAKE_CXX_FLAGS "-Wall -pedantic")

if (CMAKE_BUILD_TYPE STREQUAL "ASAN")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address,undefined")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address,undefined")
endif ()

include(cmake/AddTask.cmake)

add_subdirectory("src/labs/lab-1/task-1")
add_subdirectory("src/labs/lab-1/task-2")
add_subdirectory("src/labs/lab-1/task-3")
add_subdirectory("src/labs/lab-1/task-4")
add_subdirectory("src/labs/lab-1/task-5")
add_subdirectory("src/labs/lab-1/task-6")
add_subdirectory("src/labs/lab-1/task-7")
add_subdirectory("src/labs/lab-1/task-8")
add_subdirectory("src/labs/lab-1/task-9-1")
add_subdirectory("src/labs/lab-1/task-9-2")
add_subdirectory("src/labs/lab-1/task-10")

add_subdirectory("src/labs/lab-2/task-1")
add_subdirectory("src/labs/lab-2/task-2")
add_subdirectory("src/labs/lab-2/task-3")
add_subdirectory("src/labs/lab-2/task-4")
add_subdirectory("src/labs/lab-2/task-5")
add_subdirectory("src/labs/lab-2/task-6")
add_subdirectory("src/labs/lab-2/task-7")
add_subdirectory("src/labs/lab-2/task-8")
add_subdirectory("src/labs/lab-2/task-9")
add_subdirectory("src/labs/lab-2/task-10")

add_subdirectory("src/labs/lab-3/task-1")
add_subdirectory("src/labs/lab-3/task-2")
add_subdirectory("src/labs/lab-3/task-3")
add_subdirectory("src/labs/lab-3/task-4")
add_subdirectory("src/labs/lab-3/task-5")
add_subdirectory("src/labs/lab-3/task-6")
add_subdirectory("src/labs/lab-3/task-7")
add_subdirectory("src/labs/lab-3/task-9")
add_subdirectory("src/labs/lab-3/task-10")

add_subdirectory("src/labs/lab-4/task-2")
add_subdirectory("src/labs/lab-4/task-9-1")
add_subdirectory("src/labs/lab-4/task-9-2")
add_subdirectory("src/labs/lab-4/task-9-3")

add_subdirectory("src/labs/lab-5/task-1")
add_subdirectory("src/labs/lab-5/task-2")
add_subdirectory("src/labs/lab-5/task-3")
add_subdirectory("src/labs/lab-5/task-4")
add_subdirectory("src/labs/lab-5/task-6")
